Fixed mobile 404 page overlapping footer.

--- a/_custom/custom-bootstrap.less
+++ b/_custom/custom-bootstrap.less
@@ -274,8 +274,12 @@ strong {
 }
 
 #fourofour {
-  padding-top: 80px;
+  padding-top: 60px;
+  img {
+    padding-bottom: 140px;
+  }
   @media (min-width: @screen-md) {
+    padding-top: 80px;
     .center-vertically {
       padding-top: 15%;
     }
